--- a/asset/imcomp/traherne/index.html
+++ b/asset/imcomp/traherne/index.html
@@ -13,6 +13,9 @@
 <div id="page">
   <div class="horizontal_ref_line"></div>
   <div id="top_panel">
+    <button id="compare_base_comp" type="button" title="Compare base and comp. image pair">Compare</button>
+
+    <span class="button_group_space1"></span>
     <button id="move_to_prev_pair" type="button" title="Move to previous base and comp. image pair">&lt;</button>
     <label>Base & Comp Pair</label>
     <button id="move_to_next_pair" type="button" title="Move to next base and comp. image pair">&gt;</button>
@@ -26,7 +29,7 @@
     </select>
 
   </div>
-  <div id="message_panel">This is a very long test message. Yes this is really long. This is a very long test message. Yes this is really long. This is a very long test message. Yes this is really long. This is a very long test message. Yes this is really long. This is a very long test message. Yes this is really long. This is a very long test message. Yes this is really long. This is a very long test message. Yes this is really long. This is a very long test message. Yes this is really long.</div>
+  <div id="message_panel">Traherne Digital Collator (2.0.1) : To start, load base and comp. images.</div>
 
   <div id="middle_panel">
     <div class="row">
@@ -34,12 +37,14 @@
         <label for="base_img_filename_list">Base</label>
         <select name="base_img_filename_list" id="base_img_filename_list">
         </select>
+        <div id="base_img_status" class="img_upload_status"></div>
       </div>
       <div class="vertical_img_separator_panel cell"></div>
       <div class="img_label cell">
-        <label for="comp_img_filename_list">Comp</label>
+        <label for="comp_img_filename_list">Comp.</label>
         <select name="comp_img_filename_list" id="comp_img_filename_list">
         </select>
+        <div id="comp_img_status" class="img_upload_status"></div>
       </div>
     </div>
 
@@ -55,7 +60,7 @@
         <label for="left_panel_overlap_img">Overlap</label>
 
         <input type="radio" id="left_panel_comp_img" name="left_panel_choice" disabled="true">
-        <label for="left_panel_comp_img">Comp</label>
+        <label for="left_panel_comp_img">Comp.</label>
 
         <input type="radio" id="left_panel_diff_img" name="left_panel_choice" disabled="true">
         <label for="left_panel_diff_img">Diff</label>
@@ -65,7 +70,7 @@
 
       <div id="right_panel_choice" class="centered_text cell">
         <input type="radio" id="right_panel_comp_img" name="right_panel_choice"  disabled="true">
-        <label for="right_panel_comp_img">Comp</label>
+        <label for="right_panel_comp_img">Comp.</label>
 
         <input type="radio" id="right_panel_overlap_img" name="right_panel_choice" disabled="true">
         <label for="right_panel_overlap_img">Overlap</label>
@@ -76,13 +81,6 @@
     </div>
 
     <div id="img_display_panel" class="row">
-      <!--
-          <div id="left_panel" class="left_image"><img src="/home/tlm/dev/imcomp/test/f772a-f574-7e0c-eea3_sf5c3f4cb_crop.jpg"></div>
-          <div class="vertical_img_separator_panel">
-            <canvas id="reference_line_control"></canvas>
-          </div>
-          <div id="right_panel" class="right_image"><img src="/home/tlm/dev/imcomp/test/fd372-e7a6-6be2-51fb_sf5c3f4cb_crop_tx.jpg"></div>
-          -->
       <div id="left_panel" class="left_right_panel cell">
         <div id="left_panel_content">
           <!-- Note:
@@ -124,7 +122,7 @@
         <span class="button_group_space1"></span>
         <select name="comp_toggle_options">
           <option value="">Base &harr; Overlap</option>
-          <option value="">Comp &harr; Overlap</option>
+          <option value="">Comp. &harr; Overlap</option>
         </select>
         <button type="button">Toggle</button>
       </div>
