--- a/asset/imcomp/traherne/index.html
+++ b/asset/imcomp/traherne/index.html
@@ -50,33 +50,36 @@
 
     <div id="panel_img_choice" class="row">
       <div id="left_panel_choice" class="centered_text cell">
-        <input type="radio" id="left_panel_base_img" name="left_panel_choice" disabled="true">
-        <label for="left_panel_base_full_img">Base</label>
+        <input type="radio" name="base_display_selector" id="base_via" class="compare_tool">
+        <label for="base_via">Base (full image)</label>
 
-        <input type="radio" id="left_panel_base_img" name="left_panel_choice" disabled="true">
-        <label for="left_panel_base_region_img">Base (sel. region)</label>
+        <input type="radio" name="base_display_selector" id="base_crop" class="compare_tool">
+        <label for="base_crop">Base (cropped)</label>
 
-        <input type="radio" id="left_panel_overlap_img" name="left_panel_choice" disabled="true">
-        <label for="left_panel_overlap_img">Overlap</label>
+        <input type="radio" name="base_display_selector" id="" class="compare_tool">
+        <label for="">Overlap</label>
 
-        <input type="radio" id="left_panel_comp_img" name="left_panel_choice" disabled="true">
-        <label for="left_panel_comp_img">Comp.</label>
+        <input type="radio" name="base_display_selector" id="base_comp_crop_tx" class="compare_tool">
+        <label for="base_comp_crop_tx">Comp.</label>
 
-        <input type="radio" id="left_panel_diff_img" name="left_panel_choice" disabled="true">
-        <label for="left_panel_diff_img">Diff</label>
+        <input type="radio" name="base_display_selector" id="base_diff" class="compare_tool">
+        <label for="base_diff">Diff</label>
       </div>
 
       <div class="vertical_img_separator_panel cell"></div>
 
-      <div id="right_panel_choice" class="centered_text cell">
-        <input type="radio" id="right_panel_comp_img" name="right_panel_choice"  disabled="true">
-        <label for="right_panel_comp_img">Comp.</label>
+      <div name="right_panel_choice" class="centered_text cell">
+        <input type="radio" name="comp_display_selector" id="comp_via" class="compare_tool">
+        <label for="comp_via">Comp. (full image)</label>
 
-        <input type="radio" id="right_panel_overlap_img" name="right_panel_choice" disabled="true">
-        <label for="right_panel_overlap_img">Overlap</label>
+        <input type="radio" name="comp_display_selector" id="comp_crop_tx" class="compare_tool">
+        <label for="comp_crop_tx">Comp. (cropped)</label>
 
-        <input type="radio" id="right_panel_base_img" name="right_panel_choice" disabled="true">
-        <label for="right_panel_base_img">Base</label>
+        <input type="radio" name="comp_display_selector" id="" class="compare_tool">
+        <label for="">Overlap</label>
+
+        <input type="radio" name="comp_display_selector" id="comp_base_crop" class="compare_tool">
+        <label for="comp_base_crop">Base</label>
       </div>
     </div>
 
