@done: zoom for all images, toggle during zoom @todo: compare progress, logo, message panel, update comp. set keeping base fixed, note to user on diff color

--- a/asset/imcomp/index.html
+++ b/asset/imcomp/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Abhishek Dutta">
     <meta name="description" content="Image Comparator (imcomp) is a tool to compare different images of a same object.">
 
+    <link rel="shortcut icon" type="image/x-icon" href="/imcomp/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="imcomp.css" />
 
     <!--
