--- a/asset/imcomp/traherne/index.html
+++ b/asset/imcomp/traherne/index.html
@@ -80,16 +80,21 @@
     <!-- Content name, description and status -->
     <div id="content_label" class="row">
       <div class="img_label cell">
-        <label for="base_img_filename_list">Base</label>
+        <label for="base_img_filename_list">Base&nbsp;</label>
+        <button id="base_move_to_prev" type="button">&lt;</button>
         <select name="base_img_filename_list" id="base_img_filename_list">
         </select>
+        <button id="base_move_to_next" type="button">&gt;</button>
+
         <div id="base_img_status" class="img_upload_status"></div>
       </div>
       <div class="vertical_img_separator_panel cell"></div>
       <div class="img_label cell">
-        <label for="comp_img_filename_list">Comp.</label>
+        <label for="comp_img_filename_list">Comp.&nbsp;</label>
+        <button id="comp_move_to_prev" type="button">&lt;</button>
         <select name="comp_img_filename_list" id="comp_img_filename_list">
         </select>
+        <button id="comp_move_to_next" type="button">&gt;</button>
         <div id="comp_img_status" class="img_upload_status"></div>
       </div>
     </div>
@@ -185,13 +190,13 @@
         <span class="button_group_space1"></span>
 
         <button id="base_move_to_prev" type="button">&lt;</button>
-        <button id="base_load_images" type="button">Load Base Images</button>
+        <button id="base_load_images" type="button">Change Base Image Set</button>
         <button id="base_move_to_next" type="button">&gt;</button>
       </div>
       <div class="vertical_separator_panel cell"></div>
       <div id="right_content_controls" class="img_control cell">
         <button id="comp_move_to_prev" type="button">&lt;</button>
-        <button id="comp_load_images" type="button">Load Comp. Images</button>
+        <button id="comp_load_images" type="button">Change Comp. Image Set</button>
         <button id="comp_move_to_next" type="button">&gt;</button>
 
         <span class="button_group_space1"></span>
