--- a/asset/imcomp/traherne/index.html
+++ b/asset/imcomp/traherne/index.html
@@ -14,12 +14,60 @@
 <div id="page">
   <div id="horizontal_line" class="horizontal_ref_line display-none"></div>
   <div id="top_panel">
+    <!--
+      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	   width="160px" height="160px" viewBox="0 0 425.199 425.199" enable-background="new 0 0 425.199 425.199" xml:space="preserve">
+        <rect x="0" y="0" fill="#BC2B18" width="53.1" height="425.199"/>
+        <g>
+	  <path fill="#BC2B18" d="M364.076,78.181l2.344,90.625h-26.367c0-21.222-4.364-37.207-13.086-47.949
+		                  c-8.725-10.742-20.834-16.046-36.328-15.918l-19.141,0.195v187.5c0,3.647-0.033,7.227-0.098,10.742
+		                  c-0.067,3.516-0.165,6.87-0.293,10.059c-0.131,3.192-0.293,6.089-0.488,8.691c-0.195,2.606-0.424,4.755-0.684,6.445l32.031-1.172
+		                  v30.859H185.17v-26.367c4.425-0.128,8.429-0.552,12.012-1.27c3.58-0.714,6.573-2.179,8.984-4.395
+		                  c2.408-2.212,4.264-5.597,5.566-10.156c1.3-4.556,1.953-10.87,1.953-18.945V105.525h-18.555c-15.234,0-27.246,5.146-36.035,15.43
+		                  c-8.789,10.288-13.251,26.239-13.379,47.852H119.35l2.344-90.625H364.076z"/>
+        </g>
+      </svg>
+      -->
+
     <div id="about_panel">
-      <div class="row allcaps">Traherne</div>
-      <div class="row allcaps">Digital</div>
-      <div class="row allcaps">Collator</div>
+      <div class="row allcaps">
+        <!-- todo: improve the logo by finding a better way to combine SVG and raw text -->
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px" viewBox="0 0 400 300">
+        <path fill="#BC2B18" d="M364.076,78.181l2.344,90.625h-26.367c0-21.222-4.364-37.207-13.086-47.949
+		                  c-8.725-10.742-20.834-16.046-36.328-15.918l-19.141,0.195v187.5c0,3.647-0.033,7.227-0.098,10.742
+		                  c-0.067,3.516-0.165,6.87-0.293,10.059c-0.131,3.192-0.293,6.089-0.488,8.691c-0.195,2.606-0.424,4.755-0.684,6.445l32.031-1.172
+		                  v30.859H185.17v-26.367c4.425-0.128,8.429-0.552,12.012-1.27c3.58-0.714,6.573-2.179,8.984-4.395
+		                  c2.408-2.212,4.264-5.597,5.566-10.156c1.3-4.556,1.953-10.87,1.953-18.945V105.525h-18.555c-15.234,0-27.246,5.146-36.035,15.43
+		                  c-8.789,10.288-13.251,26.239-13.379,47.852H119.35l2.344-90.625H364.076z"/>
+        </svg>raherne
+      </div>
+<!--      <div class="row allcaps"><span style="color: #bc2b18">T</span>raherne</div>-->
+      <div class="row allcaps">&nbsp;&nbsp;Digital</div>
+      <div class="row allcaps">&nbsp;&nbsp;Collator</div>
       <div class="row small lh2">ver. 2.0.1 | <a href="http://www.robots.ox.ac.uk/~vgg/software/imcomp/traherne/">about</a> | <a href="http://www.robots.ox.ac.uk/~vgg/software/imcomp/traherne/UserGuide.html">help</a></div>
     </div>
+
+    <!--
+        <div id="about_panel">
+          <div class="row">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	         width="60px" height="60px" viewBox="0 0 425.199 425.199" enable-background="new 0 0 425.199 425.199" style="vertical-align: middle"
+	         xml:space="preserve">
+              <rect x="0" y="0" fill="#BC2B18" width="53.1" height="425.199"/>
+              <g>
+	        <path fill="#BC2B18" d="M364.076,78.181l2.344,90.625h-26.367c0-21.222-4.364-37.207-13.086-47.949
+		      c-8.725-10.742-20.834-16.046-36.328-15.918l-19.141,0.195v187.5c0,3.647-0.033,7.227-0.098,10.742
+		      c-0.067,3.516-0.165,6.87-0.293,10.059c-0.131,3.192-0.293,6.089-0.488,8.691c-0.195,2.606-0.424,4.755-0.684,6.445l32.031-1.172
+		      v30.859H185.17v-26.367c4.425-0.128,8.429-0.552,12.012-1.27c3.58-0.714,6.573-2.179,8.984-4.395
+		      c2.408-2.212,4.264-5.597,5.566-10.156c1.3-4.556,1.953-10.87,1.953-18.945V105.525h-18.555c-15.234,0-27.246,5.146-36.035,15.43
+		      c-8.789,10.288-13.251,26.239-13.379,47.852H119.35l2.344-90.625H364.076z"/>
+              </g>
+            </svg>
+
+          </div>
+      <div class="row small lh2">ver. 2.0.1 | <a href="http://www.robots.ox.ac.uk/~vgg/software/imcomp/traherne/">about</a> | <a href="http://www.robots.ox.ac.uk/~vgg/software/imcomp/traherne/UserGuide.html">help</a></div>
+    </div>
+    -->
 
     <div class="control_block">
       <span class="title">Commands</span>
