--- a/asset/imcomp/traherne/index.html
+++ b/asset/imcomp/traherne/index.html
@@ -110,7 +110,20 @@
           <option value="4.0">Zoom:   4X (magnify)</option>
         </select>
       </span>
+
     </div>
+
+    <div class="control_block">
+      <span class="title">Advanced Settings</span>
+
+      <span class="row advanced_setting">
+        <select name="algname" id="algname">
+          <option value="ransac_dlt">RANSAC + DLT (Default)</option>
+          <option value="robust_ransac_tps">Robust RANSAC + TPS</option>
+        </select>
+      </span>
+    </div>
+
   </div>
 
   <div id="message_panel" title="Shows help messages, program log, etc"></div>
